--- a/app/static/css/tradingview.css
+++ b/app/static/css/tradingview.css
@@ -32,5 +32,5 @@
 #tradingview_widget {
     width: 100% !important;
     height: 100% !important;
-    background: #ffffff;
+    background: transparent;
 }
