--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -125,7 +125,8 @@ main {
 }
 
 .text-primary {
-    /* color: rgba(var(--bs-primary-rgb), var(--bs-text-opacity)) !important; */
+    color: #0d6efd !important;
+    /* --bs-text-opacity: 1; */ /* Disabled Bootstrap text opacity */
 }
 
 .text-secondary {
