--- a/app/templates/forum/create.html
+++ b/app/templates/forum/create.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_new.html" %}
 {% block title %}Nytt foruminnlegg{% endblock %}
 {% block content %}
 <div class="container py-4">
