--- a/app/templates/forum/index.html
+++ b/app/templates/forum/index.html
@@ -1,5 +1,8 @@
-{% extends "base.html" %}
-{% block title %}Forum{% endblock %}
+{% extends "base_new.html" %}
+
+{% block title %}Forum - Aksjeradar{% endblock %}
+{% block description %}Diskuter aksjer, investeringsstrategier og markedstrender med andre investorer på Aksjeradar Forum.{% endblock %}
+
 {% block content %}
 <div class="container py-4">
     <h1 class="mb-4">Forum</h1>
