--- a/app/templates/forum/view.html
+++ b/app/templates/forum/view.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_new.html" %}
 {% block title %}Foruminnlegg{% endblock %}
 {% block content %}
 <div class="container py-4">
