--- a/app/templates/norwegian_intel/index.html
+++ b/app/templates/norwegian_intel/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_new.html" %}
 
 {% block title %}Norwegian Market Intelligence Hub | Aksjeradar{% endblock %}
 {% block description %}Avansert markedsintelligens for det norske markedet - sosial sentiment, oljekorrelasjoner, regjeringsanalyse og shippingintelligens{% endblock %}
