--- a/app/templates/norwegian_intel/social_sentiment.html
+++ b/app/templates/norwegian_intel/social_sentiment.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_new.html" %}
 
 {% block title %}Social Sentiment Tracker | Norwegian Stocks | Aksjeradar{% endblock %}
 
